<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.innovagenesis.aplicaciones.android.proyectofinalunidadsiete.activities.MainActivity">


    <item
        android:id="@+id/action_cambiarPass"
        android:orderInCategory="100"
        android:title="@string/cambiar_contrasena"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_eliminar_cuenta"
        android:orderInCategory="100"
        android:title="@string/eliminarCuenta"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close_pref"
        android:orderInCategory="100"
        android:title="@string/close_seccion"
        app:showAsAction="never" />



</menu>
